--- a/Industrial/Industrial.Model/Industrial.Model.csproj
+++ b/Industrial/Industrial.Model/Industrial.Model.csproj
@@ -46,7 +46,6 @@
     <Compile Include="Class1.cs" />
     <Compile Include="DataModels\Transaction.cs" />
     <Compile Include="DataModels\TransactionFilter.cs" />
-    <Compile Include="DataModels\User.cs" />
     <Compile Include="DefaultImplementation\SessionProvider.cs" />
     <Compile Include="DefaultImplementation\TransactionRepository.cs" />
     <Compile Include="DefaultImplementation\UserRepository.cs" />
@@ -62,6 +61,14 @@
     <Content Include="MappingFiles\User.hbm.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\Core.csproj">
+      <Project>{B34B95D5-15C7-4047-9043-0FFE5D8EC728}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Industrial.Data\Industrial.Data.csproj">
+      <Project>{0515B2CE-ECA0-4C6C-9F78-20889D92F7C1}</Project>
+      <Name>Industrial.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Industrial.Infrastructure\Industrial.Infrastructure.csproj">
       <Project>{A963F646-76B4-40EC-8E4F-E8EACC256FA8}</Project>
       <Name>Industrial.Infrastructure</Name>
